--- a/css/styles_curiosidades.css
+++ b/css/styles_curiosidades.css
@@ -31,6 +31,11 @@ h3 {
   color: var(--secondary);
 }
 
+h4 {
+  font-size: medium;
+  font-weight: 400;
+}
+
 h5 {
   color: #000000;
   font-weight: bold;
