--- a/static/css/styles_curiosidades.css
+++ b/static/css/styles_curiosidades.css
@@ -92,3 +92,23 @@ p {
   margin-left: 140px;
   margin-right: 0px;
 }
+
+.largepill {
+  padding: 6px 23px 4px 23px;
+  border: none;
+  white-space: nowrap;
+  text-decoration: none;
+  border-radius: 100px;
+  background: var(--accent);
+  color: white;
+}
+
+.dark-article {
+  padding: 15px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  background-color: #731500;
+  border-radius: 10px;
+  color: snow;
+}
+
