--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -139,6 +139,10 @@ nav > a {
     margin: 16px 20px 16px 20px;
 }
 
+nav > a:hover {
+    color: green;
+}
+
 nav > img {
     width: 30px;
     height: 30px;
@@ -180,6 +184,11 @@ section {
     padding: 10vh;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+#3dcontainer {
+    position: absolute !important;
+    right: 0 !important;
 }
 
 #title {
