--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -119,7 +119,7 @@ p {
     position: fixed;
     display: flex;
     flex-direction: column;
-    left: 48vw;
+    left: 50vw;
     text-align: center;
 }
 
@@ -130,6 +130,7 @@ nav {
     margin-top: 10px;
     background-color: #000000;
     border: 1px solid white;
+    transform: translate(-50%, 0%);
 }
 
 nav > a {
