--- a/static/css/barRace.css
+++ b/static/css/barRace.css
@@ -27,6 +27,13 @@ body {
     color: white;
 }
 
+.largepill:hover{
+    background: var(--accent);
+    box-shadow: 0px 6px 13px 0 rgb(0, 0, 0, 0.2);
+    color: white;
+}
+
 .button-container {
-    margin-top: 40px; /* Adjust the margin value as needed */
+    margin-top: 40px; 
+    margin-left:550px/* Adjust the margin value as needed */
 }
