--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -168,6 +168,7 @@ nav > img {
     width: 100%;
     position: absolute;
     left: -50%;
+    transform: translate(-50%, 0%);
 }
 
 /*section css*/
