violin with "all races" and trying to fix timeline responsiveness

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -284,3 +284,13 @@ footer > div > p {
     color: var(--accent);
     text-decoration: none;
 }
+
+
+.image-timeline{
+    position: relative;
+  }
+.image-timeline a{
+    display: block;      
+    position: absolute;
+  }
+  
